--- a/paper/effective_electron_interaction.tex
+++ b/paper/effective_electron_interaction.tex
@@ -33,14 +33,15 @@
 \newcommand{\mL}{\mathcal{L}}
 \newcommand{\bpsi}{\bar\psi}
 
-\title{Renormalized Field Theory of a Charged Fermi Liquid}
+\title{Systematic Effective Field Theory of Electrons in Simple Metals}
 \author{Kun Chen}
 \affiliation{Center for Computational Quantum Physics, Flatiron Institute, 162 5th Avenue, New York, New York 10010. The Flatiron Institute is a division of the Simons Foundation}
 \date{\today}
 % \newpage
 
 \begin{abstract}
-    In this note, we propose a systematic field-theoretic renormalization scheme to perturbatively treat a charged Fermi liquid, namely the uniform electron gas.
+    In this note, we propose a systematic effective field theory to treat the electrons in simple metals.
+    It is a more accurate and systematic than the GW approximation for the first-principle calculations in real materials.
 \end{abstract}
 
 \maketitle
