--- a/paper/effective_electron_interaction.tex
+++ b/paper/effective_electron_interaction.tex
@@ -477,7 +477,7 @@ where $\Sigma_1$ is the Fock diagram (the left diagram in Fig.\eqref{fig:order1}
 
 Similarly, the effective mass counterterm should be
 \begin{equation}
-    \tilde{m}_1 = \left. \frac{\partial \operatorname{Re} \Sigma_1}{\partial \bold{k}} \right|_{(0, k_F)}.
+    \tilde{m}_1 = \frac{m}{k_F}\left. \frac{\partial \operatorname{Re} \Sigma_1}{\partial \bold{k}} \right|_{(0, k_F)}.
 \end{equation}
 The leading order correction to the effective mass is
 \begin{equation}
