--- a/paper/effective_electron_interaction.tex
+++ b/paper/effective_electron_interaction.tex
@@ -232,7 +232,7 @@ where $z$ is the wave-function renormalization factor.
 The quasiparticle in the minimal theory has a renormalized propagator,
 \begin{equation}
     \label{eq:gR}
-    g_{R;k}=-\frac{1}{ik_0+\frac{\bk^2}{2m^*}-\mu_R},
+    g_{R;k}=-\frac{1}{ik_0-\frac{\bk^2}{2m^*}+\mu_R},
 \end{equation}
 where the mass is renormalized to the effective mass $m^*$, and the chemical potential is chosen so that $g_R$ gives the electron density. Since we also rescale the quasiparticle fields with the factor $\sqrt{z}$, the quasiparticle spectral density has weight one.
 
@@ -267,7 +267,7 @@ The bare propagator and interaction still appear in the action, but they can be 
 The dominating term $S_R$ only involves the renormalized parameters. The remaining terms are known as the counterterms that have absorbed the shifts between the bare parameters and the physical parameters. One can show,
 \begin{equation}
     \label{eq:ct1}
-    \delta_g=z\cdot g_k^{-1}-g_{R; k}^{-1} \equiv -\delta_z ik_0-\delta_m \frac{\bk^2}{2m} +\delta_\mu,
+    \delta_g=z\cdot g_k^{-1}-g_{R; k}^{-1} \equiv -\delta_z ik_0+\delta_m \frac{\bk^2}{2m} -\delta_\mu,
 \end{equation}
 where,
 \begin{equation}
