--- a/paper/effective_electron_interaction.tex
+++ b/paper/effective_electron_interaction.tex
@@ -485,7 +485,7 @@ The leading order correction to the effective mass is
 \end{equation}
 In addition, the chemical potential counterterm should remove the chemical-potential shift from the self-energy diagram, therefore,
 \begin{equation}
-    \delta \mu_1 = \operatorname{Re} \Sigma_1(0, k_F)+m_1*\frac{k_F^2}{2m}.
+    \delta \mu_1 = \operatorname{Re} \Sigma_1(0, k_F)+\tilde{m}_1\frac{k_F^2}{2m}.
 \end{equation}
 
 The above procedure can be systematically performed for the second order corrections.
