--- a/sigma/plotK.ipynb
+++ b/sigma/plotK.ipynb
@@ -31,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Base.Iterators.Pairs{Symbol, Real, Tuple{Symbol, Symbol}, NamedTuple{(:Λs, :spin), Tuple{Float64, Int64}}}(:Λs => 1.0e-5, :spin => 2)\n"
+      "Base.Iterators.Pairs{Symbol, Real, Tuple{Symbol, Symbol}, NamedTuple{(:Λs, :spin), Tuple{Float64, Int64}}}(:Λs => 0.01, :spin => 2)\n"
      ]
     },
     {
@@ -47,7 +47,7 @@
        "false"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,34 +56,38 @@
     "#para = ParaMC(rs = 5.0, Fs =-1.0, beta =100.0, mass2=1.0e-5, order = 2)\n",
     "#Zrenorm = true\n",
     "\n",
-    "para = ParaMC(rs = 5.0, Fs =-0.0, beta =100.0, mass2=1.0e-5, order = 2)\n",
+    "para = ParaMC(rs = 5.0, Fs =-0.0, beta =25.0, mass2=0.01, order = 3)\n",
     "Zrenorm = false"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Onebody counterterm:\n",
-      "order 1:  δμ = -0.33883 ± 0.0002, δz = -0.67123 ± 0.00087\n",
-      "Onebody counterterm:\n",
-      "order 1:  δμ = -0.33883 ± 0.0002, δz = -0.67123 ± 0.00087\n"
+     "ename": "LoadError",
+     "evalue": "KeyError: key \"Fa_-0.0_Fs_-0.0_beta_25.0_dim_3_isDynamic_true_isFock_false_mass2_0.01_massratio_1.0_rs_5.0_spin_2\" not found",
+     "output_type": "error",
+     "traceback": [
+      "KeyError: key \"Fa_-0.0_Fs_-0.0_beta_25.0_dim_3_isDynamic_true_isFock_false_mass2_0.01_massratio_1.0_rs_5.0_spin_2\" not found",
+      "",
+      "Stacktrace:",
+      " [1] getindex(g::JLD2.Group{JLD2.JLDFile{JLD2.MmapIO}}, name::String)",
+      "   @ JLD2 ~/project/JLD2.jl/src/groups.jl:100",
+      " [2] getindex(f::JLD2.JLDFile{JLD2.MmapIO}, name::String)",
+      "   @ JLD2 ~/project/JLD2.jl/src/JLD2.jl:379",
+      " [3] loaddata(para::ParaMC, FileName::String)",
+      "   @ Main ~/project/EFT_UEG/sigma/Kplot.jl:25",
+      " [4] process(para::ParaMC, Zrenorm::Bool)",
+      "   @ Main ~/project/EFT_UEG/sigma/Kplot.jl:52",
+      " [5] top-level scope",
+      "   @ In[63]:1",
+      " [6] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [7] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1116"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(Any[Measurement{Float64}[0.428193 ± 2.5e-5 0.425166 ± 2.3e-5 … 0.138801 ± 1.5e-5 0.108857 ± 1.4e-5; 0.428289 ± 2.5e-5 0.425264 ± 2.3e-5 … 0.138769 ± 1.5e-5 0.108841 ± 1.4e-5], Measurement{Float64}[0.0086 ± 0.00024 0.00748 ± 0.00024 … -0.03057 ± 0.00012 -0.02349 ± 0.0001; 0.0087 ± 0.00024 0.00756 ± 0.00024 … -0.03057 ± 0.00011 -0.02347 ± 0.0001]], Any[Measurement{Float64}[0.00311152 ± 2.5e-7 0.00312257 ± 2.5e-7 … 0.000521325 ± 7.1e-8 0.000299691 ± 5.0e-8; 0.00917755 ± 7.0e-7 0.00921019 ± 6.8e-7 … 0.00155571 ± 2.1e-7 0.00089864 ± 1.5e-7], Measurement{Float64}[0.0009922 ± 3.0e-6 0.0010009 ± 3.0e-6 … -0.00013478 ± 6.0e-7 -9.117e-5 ± 3.7e-7; 0.0027979 ± 7.5e-6 0.0028365 ± 7.4e-6 … -0.0004026 ± 1.7e-6 -0.0002739 ± 1.1e-6]], [0.0, 0.07072564081837611, 0.1414512816367522, 0.21217692245512831, 0.2438063905795529, 0.27543585870397747, 0.30706532682840204, 0.3326541040641022, 0.35824288129980236, 0.38383165853550255, 0.4094204357712027, 0.4350092130069029, 0.46059799024260306, 0.5159280316103827, 0.5712580729781623, 0.626588114345942, 0.8015570680994638, 0.9765260218529858, 1.1514949756065074])"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -196,7 +200,7 @@
     "    ylabel(L\"$\\frac{\\partial \\Sigma_{k, i\\omega_0}}{\\partial i \\omega}$\")\n",
     "end\n",
     "legend(loc=4)\n",
-    "savefig(\"sigmaZ_rs$(para.rs)_Fs$(para.Fs)_$(para.dim)d.pdf\")\n",
+    "#savefig(\"sigmaZ_rs$(para.rs)_Fs$(para.Fs)_$(para.dim)d.pdf\")\n",
     "println(dZ)\n",
     "#plot.plt.show()"
    ]
@@ -288,7 +292,7 @@
     "    ylabel(L\"$(\\Sigma_{k, i\\omega_0}-\\Sigma_{0, i\\omega_0})/(k^2/2m)$\")\n",
     "end\n",
     "legend(loc=2)\n",
-    "savefig(\"sigmaK_rs$(para.rs)_Fs$(para.Fs)_$(para.dim)d.pdf\")\n",
+    "#savefig(\"sigmaK_rs$(para.rs)_Fs$(para.Fs)_$(para.dim)d.pdf\")\n",
     "println(dmp)"
    ]
   },
